--- a/bankwithdrawal/src/main/resources/bootstrap.yaml
+++ b/bankwithdrawal/src/main/resources/bootstrap.yaml
@@ -3,7 +3,7 @@ spring:
     name: bankwithdrawal-microservice
   cloud:
     config:
-      uri: http://localhost:8081
+      uri: http://192.168.1.57:8081
       username: develop
       password: develop
   profiles:
