--- a/.github/workflows/main_appservicewithdrawall.yml
+++ b/.github/workflows/main_appservicewithdrawall.yml
@@ -22,13 +22,13 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install --file bankwithdrawal/pom.xml -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/bankwithdrawal/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
