--- a/bankwithdrawal/src/main/resources/bootstrap.yaml
+++ b/bankwithdrawal/src/main/resources/bootstrap.yaml
@@ -3,7 +3,8 @@ spring:
     name: bankwithdrawal-microservice
   cloud:
     config:
-      uri: http://192.168.1.57:8081
+#      uri: http://192.168.1.57:8081
+      uri: https://bootcampconfigserver.azurewebsites.net/
       username: develop
       password: develop
   profiles:
